tests/errors/runtime.OutOfBounds.res
zero
one
>> Runtime | File: runtime.OutOfBounds.art
     error | Line: 5
           | 
           | array index out of bounds: 5
           | valid range: 0..3